tests/fixtures/pass/borrowed_unit_is_abi_erased.sc
let observe(borrow value: ()): () = { value }

let main(): i32 = {
  let unit = ()
  observe(unit)
  42
}
